[package]
name = "ib-rs"
version = "0.1.0"
authors = ["Brad Svercl <bradsvercl@gmail.com>"]

[dependencies]
piston = "0.32"
piston2d-graphics = "0.21"
piston2d-opengl_graphics = "0.43"
pistoncore-glutin_window = "0.37"

rand = "0.3"
fps_counter = "0.2"

nphysics2d = "0.6"
ncollide = "0.11"
nalgebra = "0.11"

[dependencies.conrod]
version = "0.52"
features = ["piston"]
